Added Devexpress Logify Bug reporter Removed Auto Script Excuter

--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -1,21 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="logifyAlert" type="DevExpress.Logify.LogifyConfigSection, Logify.Alert.Win"/>
   </configSections>
   <appSettings>
-    <add key="Tosifi System" value="true" />
-    <add key="ActivityPoint" value="Default" />
-    <add key="Auto Start" value="false" />
-    <add key="Login" value="false" />
-    <add key="Skin" value="DevExpress Style" />
-    <add key="ConServer" value="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" />
-    <add key="IsConServer" value="false" />
-    <add key="Default School" value="0" />
+    <add key="Tosifi System" value="true"/>
+    <add key="ActivityPoint" value="Default"/>
+    <add key="Auto Start" value="false"/>
+    <add key="Login" value="false"/>
+    <add key="Skin" value="DevExpress Style"/>
+    <add key="ConServer" value="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True"/>
+    <add key="IsConServer" value="false"/>
+    <add key="Default School" value="0"/>
   </appSettings>
   <!--<connectionStrings>
     <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
+  <logifyAlert>
+    <apiKey value="YOUR_API_KEY"/>
+    <confirmSend value="false"/>
+    <offlineReportsEnabled value="false"/>
+    <offlineReportsDirectory value="offlineReports"/>
+    <offlineReportsCount value="10"/>
+    <!--
+    <customData>
+      <add key="MY_CUSTOM_DATA_KEY" value="My Custom data Value" />
+    </customData>
+    -->
+  </logifyAlert>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="LogifyAlertTraceListener" type="DevExpress.Logify.Win.LogifyAlertTraceListener, Logify.Alert.Win"/>
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
