--- a/ClassSRM/ClassSRM.csproj
+++ b/ClassSRM/ClassSRM.csproj
@@ -108,6 +108,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\FarsiLibrary.Win.DevExpress.17.1.dll</HintPath>
     </Reference>
+    <Reference Include="Logify.Alert.Core, Version=1.0.35.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Logify.Alert.Core.1.0.35\lib\net45\Logify.Alert.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Logify.Alert.Win, Version=1.0.35.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Logify.Alert.Win.1.0.35\lib\net45\Logify.Alert.Win.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Word, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -306,6 +312,7 @@
     <Compile Include="History.Designer.cs">
       <DependentUpon>History.cs</DependentUpon>
     </Compile>
+    <Compile Include="InitLogifyAlert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Splash.cs">
@@ -433,6 +440,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="ClassSRM.licenseheader" />
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\Appointment.datasource" />
     <None Include="Properties\DataSources\CheckV.datasource" />
     <None Include="Properties\DataSources\Resource.datasource" />
